Fix contrast errors on update profile and user profile and delete profile pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -233,6 +233,10 @@ h2,h3{
   color: #ffffff;
 }
 
+.loginform > a{
+  color: #378cf4f8;
+}
+
 .contact{
   background-color: #01092def;
 
